## Process this file with automake to produce Makefile.in

SUBDIRS =  src schemas conf po stubs www

install-data-local:
	eboxmod install conf/squid.xmod

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config.status \
  config.log config/mkinstalldirs depcomp config/install-sh config/missing \
  config/config.guess config/config.sub
