## Process this file with automake to produce Makefile.in

perldir = @PERLPATH@/EBox/CGI/UsersAndGroups

nobase_perl_DATA = Index.pm \
	AddGroup.pm DelGroup.pm ModGroup.pm \
	AddUser.pm DelUser.pm Group.pm DelUserFromGroup.pm \
	AddUserToGroup.pm User.pm

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(nobase_perl_DATA)
