## Process this file with automake to produce Makefile.in

wwwdir = $(datadir)/ebox/www
nobase_www_DATA = images/delete.png images/show.png \
  images/login.png images/help.png images/hide.png css/public.css \
  images/objects.png images/network.png images/logintro.png \
  images/logout.png images/title.png

EXTRA_DIST = $(nobase_www_DATA)

MAINTAINERCLEANFILES = Makefile.in
