## Process this file with automake to produce Makefile.in

Xmldir = $(localstatedir)/ebox/conf
Xml_DATA = eboxlog.conf

Passwddir = $(localstatedir)/ebox/conf
Passwd_DATA = ebox.passwd

Wwwdir = /var/www
Www_DATA = .gconf.path

Rootdir = /root
Root_DATA = $(Www_DATA)

EXTRA_DIST = $(Xml_DATA) $(Passwd_DATA) ebox.conf

MAINTAINERCLEANFILES = Makefile.in ebox.conf
