## Process this file with automake to produce Makefile.in

Confdir = $(localstatedir)/ebox/conf
Conf_DATA = eboxlog.conf apacheport.conf

Passwddir = $(localstatedir)/ebox/conf
Passwd_DATA = ebox.passwd

EXTRA_DIST = apacheport.conf $(Passwd_DATA)

MAINTAINERCLEANFILES = Makefile.in

DISTCLEANFILES = ebox.conf eboxlog.conf .gconf.path
