## Process this file with automake to produce Makefile.in

wwwdir = $(datadir)/ebox/www
nobase_www_DATA = images/delete.gif images/show.gif \
  images/help.gif images/hide.gif css/public.css \
  images/logintro.png images/title.gif \
  images/up.gif images/down.gif images/add.gif images/left.gif \
  images/sep.gif images/apply.gif images/warning.gif images/right.gif \
  images/error.gif images/msg.gif js/csshover.htc js/common.js js/help.js

EXTRA_DIST = $(nobase_www_DATA)

MAINTAINERCLEANFILES = Makefile.in
