## Process this file with automake to produce Makefile.in

perldir = @PERLPATH@/EBox/CGI

nobase_perl_DATA = Base.pm Finish.pm Run.pm MenuCSS.pm

SUBDIRS = EBox Objects Firewall Login Logout Network Summary

SOURCES = $(nobase_perl_DATA)

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(nobase_perl_DATA)
