## Process this file with automake to produce Makefile.in

perldir = @PERLPATH@/EBox/CGI/Network

nobase_perl_DATA = Route.pm Gateway.pm Iface.pm \
	Nameservers.pm VIface.pm Ifaces.pm DNS.pm Routes.pm Vlan.pm

SOURCES = $(nobase_perl_DATA)

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(nobase_perl_DATA)
